fix: make the header links slightly larger on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -592,8 +592,7 @@ table tr th.table-cell-right {
     }
     
     header nav {
-        font-size: 0.9em;
-        
+        font-size: 0.95em;
     }
 
     form.search-form input.search-input {
